[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[project]
name = "rew_to_musway"
version = "0.1.0"
description = "Python automation library for in-car speaker calibration using REW and Tunest PC DSP application"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["tunest", "dsp", "audio", "rew", "automation", "ui-automation"]
dependencies = [
    "pywin32",
    "comtypes",
    "psutil",
    "httpx>=0.27",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = []

[tool.setuptools.packages.find]
where = ["."]
include = ["tunest_pc*", "aiorew*"]
