[build-system]
requires = ["setuptools >= 68"]
build-backend = "setuptools.build_meta"

[project]
name = "rew_to_musway"
version = "0.1.0"
description = "Python automation library for in-car speaker calibration using REW and Tunest PC or Musway DSP application"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["tunest", "musway", "dsp", "audio", "rew", "automation", "ui-automation"]
dependencies = [
    "pywin32>=311",
    "comtypes>=1.4",
    "psutil>=7.2",
    "pywinauto>=0.6",
    "httpx>=0.27",
    "numpy>=1.24",
    "pyyaml>=6.0",
    "rich>=13.0",
    "questionary>=2.0",
    "typing_extensions>=4.15",
    "pillow>=12.0",
    "keyboard>=0.13",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tunest_pc*", "aiorew*", "rew_to_musway*", "musway_preset*", "musway*"]

[tool.ruff]
exclude = [".venv", ".idea", ".opencode", ".research", ".github", "openspec"]
line-length = 88
indent-width = 4

target-version = "py310"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN401", # Opiniated warning on disallowing dynamically typed expressions

    # Ignoring missing docstrings. Most things should be clear and they tend to get out of date which is worse.
    "D100", # Missing docstrings for public module
    "D101", # Missing docstrings for public classes
    "D102", # Missing docstrings for public methods
    "D103", # Missing docstrings for public functions
    "D104", # Missing docstrings in public package
    "D105", # Missing docstrings in magic method
    "D107", # Missing docstrings in __init__

    "D203", # Conflicts with other rules
    "D213", # Conflicts with other rules
    "RUF012", # Just broken

    # Formatting conflicts
    "COM812",
    "E501",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"example_*.py" = ["T201"]
"tests/*" = [
    "S101", # Asserts in tests is ok
    "PLR2004", # Magic values in tests is ok(-ish)
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
